[package]
name = "sudoku-z3-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "^0.8.5"
clap = { version = "3.2.21", features = ["derive"] }
z3 = { version="0.11.2", features = ["static-link-z3"] }
